# unlock-puzzle-generator

./: Cargo.toml  Dockerfile  docker-compose.yml
src/: bit.rs  block.rs  block_collides.rs  block_includes.rs  generate_bits.rs  generate_block.rs  generate_id.rs  generate_puzzle.rs  generate_random_number.rs  get_seed.rs  is_bit_move_legal.rs  is_latch_move_legal.rs  latch.rs  lib.rs  main.rs  puzzle.rs  there_is_a_big_horizontal_block.rs  there_is_a_big_horizontal_block_in_the_bottom_right.rs  there_is_a_big_vertical_block.rs  there_is_a_big_vertical_block_in_the_upper_right.rs  there_is_few_empty_slots.rs  tmp.rs
