[package]
name = "unlock-puzzle-generator"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = "0.8.5"
serde = { version = "1.0.108", features = ["derive"] }
getrandom = { version = "0.2.11", features = ["js"] }
serde_json = "1.0.108"
chrono = "0.4"
wasm-bindgen = "0.2.89"
